--- a/index.css
+++ b/index.css
@@ -1,10 +1,11 @@
 * {
-  padding: 0;
-  margin: 0;
+  box-sizing: border-box;
 }
 
 body {
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  padding: 0;
+  margin: 0;
 }
 
 .hue-gradient {
