--- a/index.css
+++ b/index.css
@@ -120,9 +120,14 @@ body {
   transition: opacity 0.5s;
 }
 
+.hidden {
+  display: none;
+}
+
 nav {
   display: flex;
   padding: 1rem;
+  box-shadow: 0 0 0.75rem 0px black;
 }
 
 nav > input {
